assets/css/style.css
/* ... */
.border_bottom {
    border-bottom: 1px solid var(--color-black);
}

.text_align_left {
    text-align: left;
}

/* -------------------------footer-------------------------- */
.footer {
    background-image: url(../images/footer_bg_new.png);
    background-repeat: no-repeat;
    background-position: top;
    background-size: cover;
}

.footer_para {
    color: var(--color-white);
    text-align: center;
    max-width: 375px;
}

.footer_links {
    text-decoration: none;
    font-family: Work Sans;
    font-size: 14px;
    font-weight: 600;
    line-height: 21.53px;
    text-align: center;
    color: var(--color-white);
    cursor: pointer;
}

.gap_50 {
    gap: 50px;
}

.bottom_line {
    height: 1px;
    width: 100%;
    background: var(--color-white);
}

.copyright {
    color: var(--color-white);
}

.pt_80 {
    padding-top: 80px;
}

.py_80 {
    padding: 80px 0;
}

.mt_20 {
    margin-top: 20px;
}

.section_position_svg {
    top: -34px;
    left: 15%;
}

.contact_us_position_sec3 {
    left: 10%;
    top: 50%;
}

.mb_270 {
    margin-bottom: 270px;
}

.preloader {
    position: fixed;
    width: 100%;
    height: 100%;
    background-image: url(../images/preloader_img.gif);
    z-index: 10;
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
    left: 0;
    top: 0;
    transition: all 300ms linear;
}

.-top-105 {
    top: -105%;
}

.overflow_hidden {
    overflow: hidden;
}

.position_fixed_menu {
    position: fixed;
    right: 3%;
}

@media (max-width:992px) {
    .navitems {
        width: 100%;
        height: 100%;
        position: fixed;
        top: 0;
        left: -100%;
        display: flex;
        justify-content: center;
        align-items: center;
        flex-direction: column;
        background-color: var(--nav_bg);
        transition: all 300ms linear;
        z-index: 5;
    }

    .show {
        left: 0;
    }

    .menuicon {
        z-index: 6;
    }
}

@media (min-width:992px) {
    .lg_pt_110 {
        padding-top: 110px !important;
    }
}

@media (min-width:768px) {
    .sec2_para {
        max-width: 453px;
    }

    .prev {
        left: -4% !important;
        top: 50%;
        transform: translateY(-50%);
        z-index: 1;
    }

    .next {
        right: -4% !important;
        top: 50%;
        transform: translateY(-50%);
        z-index: 1;
        left: unset !important;
    }

    .slider_heading {
        font-family: Work Sans;
        font-size: 24px;
        font-weight: 700;
        line-height: 36.96px;
        text-align: left;
    }

    .col_hover:hover .hover_box_sec_3 {
        position: relative;
        transform: translateY(-43px);
    }
}

@media (min-width:576px) {
    .hero_font {
        font-family: var(--ff-work);
        font-size: var(--font-size-61);
        font-weight: var(--font-weight-xxl);
        line-height: 71.76px;
        letter-spacing: -1.2744754552841187px;
        text-align: center;
        max-width: 730px;
    }

    .sm_mb_80 {
        margin-bottom: 80px;
    }

    .sm_pt_70 {
        padding-top: 70px;
    }

    .sec_heading {
        font-family: var(--ff-work);
        font-size: var(--font-size-40);
        font-weight: var(--font-weight-xl);
        line-height: 46.92px;
        letter-spacing: -1.2744754552841187px;
        text-align: left;
    }

    .sm_w_55 {
        width: 55% !important;
    }

    .sm_w_40 {
        width: 40% !important;
    }
}

